--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+/src/main/resources/static/videos/
+/src/main/resources/static/audios/
+/src/main/resources/static/Imagenes/
