--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=tienda
 server.port=8080
+
+logging.pattern.dateformat= hh:mm
+
+spring.main.banner-mode=off
+
+spring.thymeleaf.cache=true
+
+
