--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/
 /src/main/resources/static/videos/
 /src/main/resources/static/audios/
 /src/main/resources/static/Imagenes/
+/src/main/resources/firabase/techshop-26bf9-firebase-adminsdk-lz41q-abbd9d9d08.json
